k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoorthy-erp
spec:
  type: ClusterIP
  selector:
    app: spoorthy-erp
  ports:
    - port: 80
      targetPort: 8000
